--- a/diagram/dsl.html
+++ b/diagram/dsl.html
@@ -14,7 +14,7 @@ h1 {
 <body>
 <h1 id="Expr">Expr</h1>
 <script>
-Diagram(Choice(0, Sequence(Choice(0, Sequence(Terminal("+")), Sequence(Choice(0, Sequence(Terminal("!"), Terminal("=")))), Sequence(Choice(0, Sequence(Terminal("/"), Terminal("/")))), Sequence(Terminal("/")))))).addTo();
+Diagram(Choice(0, Sequence(Choice(0, Sequence(Terminal("+")), Sequence(Choice(0, Sequence(Terminal("!"), Terminal("=")))), Sequence(Choice(0, Sequence(Terminal("&"), Terminal("&")))), Sequence(Choice(0, Sequence(Terminal("/"), Terminal("/")))), Sequence(Terminal("/")))))).addTo();
 </script>
 
 </body>
